--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/pawelgalazka/microcli#readme",
   "dependencies": {
-    "lodash": "4.17.4",
+    "lodash": "^4.17.5",
     "microargs": "1.1.0"
   },
   "devDependencies": {
